--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "styled-components": "^6.0.8",
+    "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "prettier": "^3.0.3"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
