--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "prettier": "^3.0.3"
+    "babel-plugin-macros": "^3.1.0",
+    "prettier": "^3.0.3",
+    "raw-loader": "^4.0.2"
   },
   "babelMacros": {
     "twin": {
