--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "speed-reading-trainer",
+  "homepage": "https://llaenowyd.github.io/speed-reading-trainer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +22,9 @@
     "build": "react-scripts build",
     "format": "prettier -w .",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-plugin-macros": "^3.1.0",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.3",
     "raw-loader": "^4.0.2"
   },
