--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "format": "prettier -w .",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +49,8 @@
     "babel-plugin-macros": "^3.1.0",
     "gh-pages": "^6.0.0",
     "prettier": "^3.0.3",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "serve": "^14.2.1"
   },
   "babelMacros": {
     "twin": {
