--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "build": "react-scripts build",
     "format": "prettier -w .",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +45,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-plugin-macros": "^3.1.0",
-    "gh-pages": "^6.0.0",
     "prettier": "^3.0.3",
     "raw-loader": "^4.0.2",
     "serve": "^14.2.1"
